--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-_site
-.sass-cache
+.bundle
+.DS_Store
 .jekyll-metadata
+.sass-cache
+_asset_bundler_cache
+_site
+example/_site
+node_modules
+npm-debug.log*
