--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ url                      : "https://kaizendorks.github.io" # the base hostname &
 baseurl                  : "/" # the subpath of your site, e.g. /blog
 repository               : "kaizendorks/kaizendorks.github.io"
 teaser                   : "/assets/images/owl_teaser_nobg.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/logo_circle.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/logo.svg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "Kaizen Dorks Dublin" # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
@@ -106,7 +106,7 @@ analytics:
 # Site Author
 author:
   name             : "Kaizen Dorks Dublin"
-  avatar           : "assets/images/logo.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "assets/images/logo.svg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "We are an amazing group."
   location         : "Dublin, Ireland"
   email            :
