--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-.bundle
-.DS_Store
-.jekyll-metadata
-.sass-cache
-_asset_bundler_cache
-_site
-example/_site
+pids
+logs
 node_modules
-npm-debug.log*
+npm-debug.log
+coverage/
+run
+dist
+.DS_Store
+.nyc_output
+.basement
+config.local.js
+basement_dist
