--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/theme-blog": "^2.1.0",
     "vuepress": "^1.3.1",
-    "@vuepress/theme-blog": "^2.1.0"
+    "vuepress-plugin-check-md": "0.0.2"
   }
 }
