--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vuepress/theme-blog": "^2.1.0",
     "vuepress": "^1.3.1",
-    "vuepress-plugin-check-md": "0.0.2"
+    "vuepress-plugin-check-md": "0.0.2",
+    "vuepress-plugin-social-share": "^0.2.1"
   }
 }
